--- a/contact.html
+++ b/contact.html
@@ -48,21 +48,57 @@
   
 
 
-  <!-- Hero section -->
+  <!-- Contact page -->
 
 
-
-  <section class="p-6 dark:bg-gray-800 dark:text-gray-100">
-    <div class="container grid gap-6 mx-auto text-center lg:grid-cols-2 xl:grid-cols-5">
-      <div class="w-full px-6 py-16 rounded-md sm:px-12 md:px-16 xl:col-span-2 dark:bg-gray-900">
-        <span class="block mb-2 dark:text-violet-400"></span>
-        <h1 class="text-5xl font-extrabold dark:text-gray-50">Give me  clean air <br> or <br> Give me Death</h1>
+  <section class="text-gray-600 body-font relative">
+    <div class="container px-5 py-24 mx-auto">
+      <div class="flex flex-col text-center w-full mb-12">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Contact Us</h1>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base"></p>
       </div>
-      <img src="https://images.pexels.com/photos/459728/pexels-photo-459728.jpeg?cs=srgb&dl=pexels-pixabay-459728.jpg&fm=jpg" alt="" class="object-cover w-full rounded-md xl:col-span-3 dark:bg-gray-500">
+      <div class="lg:w-1/2 md:w-2/3 mx-auto">
+        <div class="flex flex-wrap -m-2">
+          <div class="p-2 w-1/2">
+            <div class="relative">
+              <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
+              <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+            </div>
+          </div>
+          <div class="p-2 w-1/2">
+            <div class="relative">
+              <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+              <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+            </div>
+          </div>
+          <div class="p-2 w-full">
+            <div class="relative">
+              <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+              <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+            </div>
+          </div>
+          <div class="p-2 w-full">
+            <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
+          </div>
+          <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
+            <a class="text-indigo-500">anuragbksingh@email.com</a>
+            <p class="leading-normal my-5">Kharghar
+              <br>Navi Mumbai-410210
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  
 
+
+
+
+
+
+
+  
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
-
 </body>
 </html>
