--- a/data.html
+++ b/data.html
@@ -12,13 +12,15 @@
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
   
   
-  
-  <link href="./css/c3.min.css" rel="stylesheet">
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
+
+  
+<script  src="./data.js " ></script>
  
   
 </head>
-<body class="bg-gray-900">
+<body class="">
 
      <nav class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
     <div class="container flex flex-wrap items-center justify-between mx-auto">
@@ -55,14 +57,11 @@
   </nav>  
   
 
-  <div id="chart" style="position: abolsute;top:100px" ></div>
 
 
+  <div id="chartContainer" style="position: absolute; top: 80px; height: 300px; width: 100%;"></div>
+  
 
-
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="./js/c3.min.js"></script>
-<script  src="./data.js " ></script>
 
 
 
