--- a/data.html
+++ b/data.html
@@ -9,14 +9,11 @@
   <!-- tailwind css -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-  <script type="module"   src="./data.js " defer></script>
+  <script    src="./data.js " defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
-  
-  
 
-  
 </head>
 <body class="">
 
