--- a/data.html
+++ b/data.html
@@ -52,8 +52,20 @@
   </nav>  
 
 
-  <div id="chart" style="width:100%;height: 100%; position: relative; top:120px;">
+  <div id="chart" >
   </div>
+
+<style>
+  #chart{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  }
   
+
+</style>
+
+
 </body>
 </html>
