added all 6 charts

--- a/data.html
+++ b/data.html
@@ -55,13 +55,55 @@
   <div id="chart" >
   </div>
 
-<style>
+  <div id="chart2" >
+  </div>
+
+  <div id="chart3" >
+  </div>
+  <div id="chart4" >
+  </div>
+  <div id="chart5" >
+  </div>
+  <div id="chart6" >
+  </div>
+  <style>
   #chart{
     width:100%;
     height: 100%; 
     position: relative; 
     top:120px;
   }
+  #chart2{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  }
+  #chart3{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  }
+  #chart4{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  }
+  #chart5{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  } 
+  #chart6{
+    width:100%;
+    height: 100%; 
+    position: relative; 
+    top:120px;
+  }
+  
   
 
 </style>
