--- a/data.html
+++ b/data.html
@@ -14,11 +14,8 @@
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
   </script>
-  <link
-  href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
-  rel="stylesheet"
-  type="text/css"
-/>
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-800">
 
@@ -54,13 +51,31 @@
       </ul>
     </div>
     </div>
-  </nav>  
+  </nav>   
 
 
 
-  
 
-  <section class="text-gray-600 body-font">
+
+
+<div class="container mt-40 ">
+  <h1 class="text-center text-4xl	">Nerul Air Quality Index (AQI)</h1>
+  <p class="text-center text-base	">Real-time air pollution level Mumbai, Maharashtra  </p>
+  <h2 class="text-center mt-10 text-xl	">Update:18th March 2023 ,06:20PM</h2>
+</div>
+<div class="btncontainer flex justify-center ">
+  <button class="mt-10 px-6 py-2 bg-red-600 rounded-xl	text-lg	 ">Hazardous</button>
+</div>
+
+<div class="secondcontainer mt-20">
+  <h1 class="text-center text-8xl	">154</h1>
+  <article class="text-center mt-2 text-xl	">out of 100%  </article>
+</div>
+
+
+
+
+  <!-- <section class="text-gray-600 body-font">
     <div class="container flex flex-wrap px-5 py-24 mx-auto items-center">
       <div class="md:w-1/2 md:pr-12 md:py-8 md:border-r md:border-b-0 mb-10 md:mb-0 pb-10 border-b border-gray-200">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white	">Kharghar Air Quality Index (AQI)        </h1>
@@ -68,7 +83,8 @@
         <button style="background-color: #ffa500" class="btn  text-black btn-wide mt-4 flex items-center	 ">Poor</button>
       </div>
       <div class="flex flex-col md:w-1/2 md:pl-12">
-        <h2 class="title-font font-semibold text-white tracking-wider text-xl	mb-3">112 <br class="">(AQI)</h2>
+        <h2 class=" title-font font-semibold text-white tracking-wider text-xl	mb-3 lg:ml-10">222</h2>
+        <p class="ml-">AQI</p>
      
       </div>
     </div>
@@ -88,10 +104,10 @@
         <option value="Humidity ">Humidity</option>
       </select> 
      
-  </div>
+  </div> -->
 
-  <div id="chart" >
-  </div>
+  <!-- <div id="chart" >
+  </div> -->
 
   <!-- <div id="chart2" >
   </div>
@@ -104,66 +120,5 @@
   </div>
   <div id="chart6" >
   </div> -->
-  <style>
-    *{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-.main-form{
-  max-width: 600px;
-  margin:16rem auto;
-}
-.name{
- padding-top: 80px;
-}
-.chartrender{
-  position: absolute;
-  margin-right: 40rem;
-  width: 80rem;
-  height: 200px;
-  border: 2px solid red;
-}
-  #chart{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:-10rem;
-  }
-  #chart2{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:120px;
-  }
-  #chart3{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:120px;
-  }
-  #chart4{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:120px;
-  }
-  #chart5{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:120px;
-  } 
-  #chart6{
-    width:100%;
-    height: 100%; 
-    position: relative; 
-    top:120px;
-  }
-
-
-</style>
-
-
 </body>
 </html>
