chnaged the name from nerul to kharghar

--- a/data.html
+++ b/data.html
@@ -59,7 +59,7 @@
 
 
 <div class="container mt-40 ">
-  <h1 class="text-center text-4xl	">Nerul Air Quality Index (AQI)</h1>
+  <h1 class="text-center text-4xl	">Kharghar Air Quality Index (AQI)</h1>
   <p class="text-center text-base	">Real-time air pollution level Mumbai, Maharashtra  </p>
   <h2 class="text-center mt-10 text-xl	">Update:18th March 2023 ,06:20PM</h2>
 </div>
