--- a/data.html
+++ b/data.html
@@ -73,23 +73,29 @@
 </div>
 
 
+<div class="rangecontainer  mt-10  flex flex-col	  items-center	">
+  <div class="goodcontainer w-14 bg-[#34a12b] py-2 text-center text-sm	">
+    0-10%
+  </div>
+  <div class="moderatecontainer w-14 bg-[#d4cc0f] text-sm py-2 text-center ">
+    11-20%
+  </div>
+  <div class="poorcontainer text-sm w-14  bg-[#e9572a]	 py-2 text-center">
+    22-40%
+  </div>
+  <div class="UnHealthy bg-[#ec4d9f]	 text-sm w-14  py-2	text-center">
+    41-60%
+  </div>
+  <div class="Severe  bg-[#9858a2] w-14 text-sm py-2 text-center">
+  61-80%
+  </div>
+  <div class="Hazardous text-sm  bg-[#c11e2f]  w-14 py-2 text-center">
+  81-100%
+  </div>
+</div>
 
 
-  <!-- <section class="text-gray-600 body-font">
-    <div class="container flex flex-wrap px-5 py-24 mx-auto items-center">
-      <div class="md:w-1/2 md:pr-12 md:py-8 md:border-r md:border-b-0 mb-10 md:mb-0 pb-10 border-b border-gray-200">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white	">Kharghar Air Quality Index (AQI)        </h1>
-        <p class="leading-relaxed text-base">Last Update : 09 March 7:17PM</p>
-        <button style="background-color: #ffa500" class="btn  text-black btn-wide mt-4 flex items-center	 ">Poor</button>
-      </div>
-      <div class="flex flex-col md:w-1/2 md:pl-12">
-        <h2 class=" title-font font-semibold text-white tracking-wider text-xl	mb-3 lg:ml-10">222</h2>
-        <p class="ml-">AQI</p>
-     
-      </div>
-    </div>
-  </section>
-  
+  <!-- 
   <div class="main-form">
     
   
