--- a/data.html
+++ b/data.html
@@ -59,9 +59,10 @@
 
 
 <div class="container mt-40 ">
-  <h1 class="text-center text-4xl	">Kharghar Air Quality Index (AQI)</h1>
+  <h1 class="mb-2 text-white text-center">All the values are for testing purpose </h1>
+  <h1 class="text-center text-4xl text-white		">Kharghar Air Quality Index (AQI)</h1>
   <p class="text-center text-base	">Real-time air pollution level Mumbai, Maharashtra  </p>
-  <h2 class="text-center mt-10 text-xl	">Update:18th March 2023 ,06:20PM</h2>
+  <h2 class="text-center mt-10 text-xl text-slate-700		">Update:18th March 2023 ,06:20PM</h2>
 </div>
 <div class="btncontainer flex justify-center ">
   <button class="mt-8 px-6 py-2 bg-red-600 rounded-xl	text-lg	 ">Hazardous</button>
@@ -73,26 +74,49 @@
 </div>
 
 
-<div class="rangecontainer  mt-10  flex flex-col	  items-center	">
-  <div class="goodcontainer w-14 bg-[#34a12b] py-2 text-center text-sm	">
+<div class="rangecontainer mt-10  flex flex-col	items-center md:flex-row justify-center 	">
+  <div class="goodcontainer w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
     0-10%
   </div>
-  <div class="moderatecontainer w-14 bg-[#d4cc0f] text-sm py-2 text-center ">
+  <div class="moderatecontainer w-16 bg-[#d4cc0f] text-sm py-2 text-center md:w-24">
     11-20%
   </div>
-  <div class="poorcontainer text-sm w-14  bg-[#e9572a]	 py-2 text-center">
+  <div class="poorcontainer text-sm w-16  bg-[#e9572a]	 py-2 text-center md:w-24">
     22-40%
   </div>
-  <div class="UnHealthy bg-[#ec4d9f]	 text-sm w-14  py-2	text-center">
+  <div class="UnHealthycontainer bg-[#ec4d9f]	 text-sm w-16  py-2	text-center md:w-24">
     41-60%
   </div>
-  <div class="Severe  bg-[#9858a2] w-14 text-sm py-2 text-center">
+  <div class="Severecontainer  bg-[#9858a2] w-16 text-sm py-2 text-center md:w-24">
   61-80%
   </div>
-  <div class="Hazardous text-sm  bg-[#c11e2f]  w-14 py-2 text-center">
+  <div class="Hazardous text-sm  bg-[#c11e2f]  w-16 py-2 text-center md:w-24">
   81-100%
   </div>
 </div>
+
+
+<div class="namecontainer flex flex-col items-center md:flex-row justify-center md:space-x-10    ">
+  <div class="good text-[#34a12b] ">
+    Good
+  </div>
+  <div class="Moderate text-[#d4cc0f]  ">
+    Moderate
+  </div>
+  <div class="Poor  text-[#e9572a]	">
+    Poor
+  </div>
+  <div class="Unhealthy text-[#ec4d9f]	">
+    Unhealthy
+  </div>
+  <div class="Severe text-[#9858a2] ">
+    Severe
+  </div>
+  <div class="Hazardous text-[#c11e2f] ">
+    Hazardous
+  </div>
+</div>
+
 
 
   <!-- 
