changed the font size and color

--- a/data.html
+++ b/data.html
@@ -69,28 +69,28 @@
 </div>
 
 <div class="secondcontainer mt-10">
-  <h1 class="text-center text-8xl	">154</h1>
+  <h1 class="text-center text-8xl text-white	">154</h1>
   <article class="text-center mt-2 text-xl	">out of 100%  </article>
 </div>
 
 
 <div class="rangecontainer mt-10  flex flex-col	items-center md:flex-row justify-center 	">
-  <div class="goodcontainer w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
+  <div class="goodcontainer text-white w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
     0-10%
   </div>
-  <div class="moderatecontainer w-16 bg-[#d4cc0f] text-sm py-2 text-center md:w-24">
+  <div class="moderatecontainer text-white w-16 bg-[#d4cc0f] text-sm py-2 text-center md:w-24">
     11-20%
   </div>
-  <div class="poorcontainer text-sm w-16  bg-[#e9572a]	 py-2 text-center md:w-24">
+  <div class="poorcontainer text-white text-sm w-16  bg-[#e9572a]	 py-2 text-center md:w-24">
     22-40%
   </div>
-  <div class="UnHealthycontainer bg-[#ec4d9f]	 text-sm w-16  py-2	text-center md:w-24">
+  <div class="UnHealthycontainer  bg-[#ec4d9f]	 text-sm w-16 text-white py-2	text-center md:w-24">
     41-60%
   </div>
-  <div class="Severecontainer  bg-[#9858a2] w-16 text-sm py-2 text-center md:w-24">
+  <div class="Severecontainer text-white bg-[#9858a2] w-16 text-sm py-2 text-center md:w-24">
   61-80%
   </div>
-  <div class="Hazardous text-sm  bg-[#c11e2f]  w-16 py-2 text-center md:w-24">
+  <div class="Hazardous text-sm text-white bg-[#c11e2f]  w-16 py-2 text-center md:w-24">
   81-100%
   </div>
 </div>
