added the range table for mobile dev

--- a/data.html
+++ b/data.html
@@ -74,7 +74,7 @@
 </div>
 
 
-<div class="rangecontainer mt-10  flex flex-col	items-center md:flex-row justify-center 	">
+<div class="rangecontainer mt-10  flex flex-row	items-center  	">
   <div class="goodcontainer text-white w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
     0-10%
   </div>
@@ -96,23 +96,23 @@
 </div>
 
 
-<div class="namecontainer flex flex-col items-center md:flex-row justify-center md:space-x-10    ">
-  <div class="good text-[#34a12b] ">
+<div class="namecontainer  flex flex-row gap-4  ">
+  <div class="good text-[#34a12b] text-sm ">
     Good
   </div>
-  <div class="Moderate text-[#d4cc0f]  ">
+  <div class="Moderate text-[#d4cc0f] text-sm  ">
     Moderate
   </div>
-  <div class="Poor  text-[#e9572a]	">
+  <div class="Poor  text-[#e9572a] text-sm	">
     Poor
   </div>
-  <div class="Unhealthy text-[#ec4d9f]	">
+  <div class="Unhealthy text-[#ec4d9f]	text-sm ">
     Unhealthy
   </div>
-  <div class="Severe text-[#9858a2] ">
+  <div class="Severe text-[#9858a2] text-sm ">
     Severe
   </div>
-  <div class="Hazardous text-[#c11e2f] ">
+  <div class="Hazardous text-[#c11e2f]  text-sm">
     Hazardous
   </div>
 </div>
