--- a/data.html
+++ b/data.html
@@ -74,7 +74,7 @@
 </div>
 
 
-<div class="rangecontainer mt-10  flex flex-row	items-center  	">
+<div class="rangecontainer mt-10  flex flex-row	items-center md:flex-row md:justify-center	 	">
   <div class="goodcontainer text-white w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
     0-10%
   </div>
@@ -96,23 +96,23 @@
 </div>
 
 
-<div class="namecontainer  flex flex-row gap-4  ">
-  <div class="good text-[#34a12b] text-sm ">
+<div class="namecontainer  flex flex-row gap-4 md:justify-center	md:gap-10">
+  <div class="good text-[#34a12b] text-sm md:text-base ">
     Good
   </div>
-  <div class="Moderate text-[#d4cc0f] text-sm  ">
+  <div class="Moderate text-[#d4cc0f] text-sm md:text-base  ">
     Moderate
   </div>
-  <div class="Poor  text-[#e9572a] text-sm	">
+  <div class="Poor  text-[#e9572a] text-sm md:text-base	">
     Poor
   </div>
-  <div class="Unhealthy text-[#ec4d9f]	text-sm ">
+  <div class="Unhealthy text-[#ec4d9f]	text-sm  md:text-base">
     Unhealthy
   </div>
-  <div class="Severe text-[#9858a2] text-sm ">
+  <div class="Severe text-[#9858a2] text-sm md:text-base ">
     Severe
   </div>
-  <div class="Hazardous text-[#c11e2f]  text-sm">
+  <div class="Hazardous text-[#c11e2f]  text-sm md:text-base">
     Hazardous
   </div>
 </div>
