--- a/data.html
+++ b/data.html
@@ -118,13 +118,18 @@
 </div>
 
 
+<div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  ">
+  <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1>
+  <article class="text-center mt-2 text-base text-[#999]" >Explore an insightful air pollution data for last 24 hrs, 7 days & 1 month  </article>
+</div>
+
 
   <!-- 
   <div class="main-form">
     
   
     <h1 class="main-heading font-bold	text-2xl	 ">Historic Air Quality Graph of Nerul    </h1>
-      <label class="name" for="selection"class="whitespace-nowrap" >Explore an insightful air pollution data for last 24 hrs, 7 days & 1 month
+      <label class="name" for="selection"class="whitespace-nowrap" >
       </label>
       <select  id="option2"  class="mt-6 px-2 text-black   ">
         <option value="Methane " >Methane (CH4)</option>
