added the option into the data.html

--- a/data.html
+++ b/data.html
@@ -121,16 +121,37 @@
 <div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  ">
   <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1>
   <article class="text-center mt-2 text-base text-[#999]" >Explore an insightful air pollution data for last 24 hrs, 7 days & 1 month  </article>
+  
+<div class="selectoption mt-2 ml-[20%] justify-center	 w-1/4 md:w-1/5 ">
+
+  <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block  p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+    <option value="Methane">Methane</option>
+    <option value="CO">CO</option>
+    <option value="Ammonia">Ammonia</option>
+    <option value="H2S">H2S</option>
+    <option value="Temperature">Temperature</option>
+    <option value="Humidity">Humidity</option>
+  </select>
+  
+  </div>
+  
+  <div class="divdayscontainer mt-[-12%] ml-[60%] md:mt-[-6%] md:ml-[70%]  md:w-1/4 ">
+    <select id="countries" class=" w-3/4	bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block  p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+      <option value="month">1 month</option>
+      <option value="weeks">7 weeks</option>
+      <option value="Day">24 day</option>
+    </select>
+  </div>
+  
 </div>
+
+
+
+
 
 
   <!-- 
   <div class="main-form">
-    
-  
-    <h1 class="main-heading font-bold	text-2xl	 ">Historic Air Quality Graph of Nerul    </h1>
-      <label class="name" for="selection"class="whitespace-nowrap" >
-      </label>
       <select  id="option2"  class="mt-6 px-2 text-black   ">
         <option value="Methane " >Methane (CH4)</option>
         <option value="Ammonia ">Ammonia (Nh3)</option>
