--- a/data.html
+++ b/data.html
@@ -13,9 +13,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
-  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-  <script src="assets/plugins/global/plugins.bundle.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 
 
@@ -64,12 +62,12 @@
 
 
 <div class="container mt-40 ">
-  <h1 class="mb-2 text-white text-center">All the values are for testing purpose </h1>
+  <!-- <h1 class="mb-2 text-white text-center">All the values are for testing purpose </h1> -->
   <h1 class="text-center text-4xl text-white		">Kharghar Air Quality Index (AQI)</h1>
   
 
   <p class="text-center text-base	">Real-time air pollution level Mumbai, Maharashtra  </p>
-  <h2 class="text-center mt-10 text-xl text-slate-700		">Update:18th March 2023 ,06:20PM</h2>
+  <h2 class="text-center mt-10 text-xl text-slate-700	 	">Update : <span class="update">Loading </span></h2>
 </div>
 <div class="btncontainer flex justify-center ">
   <button class="mt-8 px-6 py-2 bg-red-600 rounded-xl	text-lg	 ">Hazardous</button>
@@ -78,40 +76,115 @@
 <div class="secondcontainer mt-10">
   <h1 class="text-center text-8xl text-white	">154</h1>
 </div>
+<!-- 
+<div class="rangecontainer mt-10  flex flex-row	items-center md:flex-row md:justify-center	 	">
+  <div class="goodcontainer text-white w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
+    0-10%
+  </div>
+  <div class="moderatecontainer text-white w-16 bg-[#d4cc0f] text-sm py-2 text-center md:w-24">
+    11-20%
+  </div>
+  <div class="poorcontainer text-white text-sm w-16  bg-[#e9572a]	 py-2 text-center md:w-24">
+    22-40%
+  </div>
+  <div class="UnHealthycontainer  bg-[#ec4d9f]	 text-sm w-16 text-white py-2	text-center md:w-24">
+    41-60%
+  </div>
+  <div class="Severecontainer text-white bg-[#9858a2] w-16 text-sm py-2 text-center md:w-24">
+  61-80%
+  </div>
+  <div class="Hazardous text-sm text-white bg-[#c11e2f]  w-16 py-2 text-center md:w-24">
+  81-100%
+  </div>
+</div>
 
 
+<div class="namecontainer  flex flex-row gap-4 md:justify-center	md:gap-10">
+  <div class="good text-[#34a12b] text-sm md:text-base ">
+    Good
+  </div>
+  <div class="Moderate text-[#d4cc0f] text-sm md:text-base  ">
+    Moderate
+  </div>
+  <div class="Poor  text-[#e9572a] text-sm md:text-base	">
+    Poor
+  </div>
+  <div class="Unhealthy text-[#ec4d9f]	text-sm  md:text-base">
+    Unhealthy
+  </div>
+  <div class="Severe text-[#9858a2] text-sm md:text-base ">
+    Severe
+  </div>
+  <div class="Hazardous text-[#c11e2f]  text-sm md:text-base">
+    Hazardous
+  </div>
+</div> -->
+<div class="mt-10 text-center grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="sensormq2 font-bold text-lg mb-2">Methane</h4>
+    <p class="sensormq2value text-gray-600 mb-2">Loading</p>
+    <p class="sensormq2time text-gray-600">Loading</p>
+  </div>
 
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="sensormq9 font-bold text-lg mb-2">Carbon Monoxide (CO)</h4>
+    <p class="sensormq9value text-gray-600 mb-2">Loading</p>
+    <p class="sensormq9time text-gray-600">loading</p>
+  </div>
+
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="font-bold text-lg mb-2">Ammonia (NH3)</h4>
+    <p class="sensormq135value text-gray-600 mb-2">loading</p>
+    <p class="sensormq135time text-gray-600">loading</p>
+  </div>
+
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="font-bold text-lg mb-2">H2S </h4>
+    <p class="sensormq136value text-gray-600 mb-2">Loading</p>
+    <p class="sensormq136time text-gray-600">Loading</p>
+  </div>
+
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="font-bold text-lg mb-2">Temperature</h4>
+    <p class="Temperature text-gray-600 mb-2">Loading</p>
+    <p class="TemperatureVAL text-gray-600">Loading</p>
+  </div>
+
+  <div class="bg-white rounded-md shadow-md p-6">
+    <h4 class="font-bold text-lg mb-2">Humidity</h4>
+    <p class="Humidity text-gray-600 mb-2">Loading</p>
+    <p class="HumidityTime text-gray-600">Loading</p>
+  </div>
+</div>
 
 <div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  ">
   <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1>
 
+
  
 
-<div id="chart" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
-  <div id="char2" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5"></div>
-  <div id="chart3" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5"></div>
-  <div id="chart4" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5"></div>
-  <div id="chart5" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5"></div>
-  <div id="chart6" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5"></div>
-  
+<div id="chart"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
+
  
 </div>
-<h1 class="text-white	text-2xl text-center">Location of Device </h1>
-<iframe  class="mt-20 mb-10 ml-10 w-3/2 h-[40%] md:mt-[25px] md:ml-[30%] md:w-[600px] h-[450px]" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3771.8470422246196!2d73.0550782!3d19.026460599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDAxJzM1LjMiTiA3M8KwMDMnMTguMyJF!5e0!3m2!1sen!2sin!4v1680161948611!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-<!-- <div id="chart2" >
+
+
+ <div id="chart2"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
 </div>
 
 
 
   
-  <div id="chart3" >
+  <div id="chart3"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
   </div>
-  <div id="chart4" >
+  <div id="chart4" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5" >
   </div>
-  <div id="chart5" >
+  <!-- <div id="chart5" class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5" >
   </div>
-  <div id="chart6" >
+  <div id="chart6"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
   </div> -->
+  <h1 class="text-white	text-2xl text-center">Location of Device </h1>
+ <iframe  class="mt-20 mb-10 ml-10 w-3/2 h-[40%] md:mt-[25px] md:ml-[30%] md:w-[600px] h-[450px]" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3771.8470422246196!2d73.0550782!3d19.026460599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDAxJzM1LjMiTiA3M8KwMDMnMTguMyJF!5e0!3m2!1sen!2sin!4v1680161948611!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
 </body>
 </html>
