--- a/data.html
+++ b/data.html
@@ -9,7 +9,7 @@
   <!-- tailwind css -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-  <script    src="./data.js " defer></script>
+  <script type="module"   src="./data.js " defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
@@ -57,26 +57,23 @@
   </nav>   
 
 
-
-
-
-
+  
 <div class="container mt-40 ">
   <!-- <h1 class="mb-2 text-white text-center">All the values are for testing purpose </h1> -->
   <h1 class="text-center text-4xl text-white		">Kharghar Air Quality Index (AQI)</h1>
   
 
-  <p class="text-center text-base	">Real-time air pollution level Mumbai, Maharashtra  </p>
-  <h2 class="text-center mt-10 text-xl text-slate-700	 	">Update : <span class="update">Loading </span></h2>
+  <p class="text-center " style="color: #758283;">Real-time air pollution level Mumbai, Maharashtra  </p>
+  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update">Loading </span></h2>
 </div>
 <div class="btncontainer flex justify-center ">
   <button class="mt-8 px-6 py-2 bg-red-600 rounded-xl	text-lg	 ">Hazardous</button>
 </div>
 
 <div class="secondcontainer mt-10">
-  <h1 class="text-center text-8xl text-white	">154</h1>
+  <h1 class="text-center text-8xl text-white avgval	">17</h1>
 </div>
-<!-- 
+
 <div class="rangecontainer mt-10  flex flex-row	items-center md:flex-row md:justify-center	 	">
   <div class="goodcontainer text-white w-16 bg-[#34a12b] py-2 text-center text-sm md:w-24	">
     0-10%
@@ -118,7 +115,7 @@
   <div class="Hazardous text-[#c11e2f]  text-sm md:text-base">
     Hazardous
   </div>
-</div> -->
+</div>
 <div class="mt-10 text-center grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   <div class="bg-white rounded-md shadow-md p-6">
     <h4 class="sensormq2 font-bold text-lg mb-2">Methane</h4>
@@ -158,10 +155,9 @@
 </div>
 
 <div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  ">
-  <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1>
+  <!-- <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1> -->
 
 
- 
 
 <div id="chart"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
 
