--- a/data.html
+++ b/data.html
@@ -66,12 +66,12 @@
   <p class="text-center " style="color: #758283;">Real-time air pollution level Mumbai, Maharashtra  </p>
   <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update">Loading </span></h2>
 </div>
-<div class="btncontainer flex justify-center ">
-  <button class="mt-8 px-6 py-2 bg-red-600 rounded-xl	text-lg	 ">Hazardous</button>
+<div class="btncontainer flex justify-center  ">
+  <h1 id="main-heading" class="mt-8 px-6 py-2  rounded-xl	text-lg bg-red-600 Hazardous	 ">loading </h>
 </div>
 
 <div class="secondcontainer mt-10">
-  <h1 class="text-center text-8xl text-white avgval	">17</h1>
+  <h1 class="text-center text-8xl text-white avgval2	">loading</h1>
 </div>
 
 <div class="rangecontainer mt-10  flex flex-row	items-center md:flex-row md:justify-center	 	">
@@ -82,7 +82,7 @@
     11-20%
   </div>
   <div class="poorcontainer text-white text-sm w-16  bg-[#e9572a]	 py-2 text-center md:w-24">
-    22-40%
+    21-40%
   </div>
   <div class="UnHealthycontainer  bg-[#ec4d9f]	 text-sm w-16 text-white py-2	text-center md:w-24">
     41-60%
@@ -136,7 +136,7 @@
   </div>
 
   <div class="bg-white rounded-md shadow-md p-6">
-    <h4 class="font-bold text-lg mb-2">H2S </h4>
+    <h4 class="font-bold text-lg mb-2">Hydrogen Sulfide (H2S) </h4>
     <p class="sensormq136value text-gray-600 mb-2">Loading</p>
     <p class="sensormq136time text-gray-600">Loading</p>
   </div>
