--- a/data.html
+++ b/data.html
@@ -154,7 +154,8 @@
   </div>
 </div>
 
-<div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  ">
+
+<!-- <div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  "> -->
   <!-- <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1> -->
 <!-- 
 
