--- a/data.html
+++ b/data.html
@@ -57,21 +57,24 @@
   </nav>   
 
 
-  
+
 <div class="container mt-40 ">
+
   <!-- <h1 class="mb-2 text-white text-center">All the values are for testing purpose </h1> -->
   <h1 class="text-center text-4xl text-white		">Kharghar Air Quality Index (AQI)</h1>
   
 
   <p class="text-center " style="color: #758283;">Real-time air pollution level Mumbai, Maharashtra  </p>
-  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update">Loading </span></h2>
+  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update">loading
+
+  </span></h2>
 </div>
 <div class="btncontainer flex justify-center  ">
   <h1 id="main-heading" class="mt-8 px-6 py-2  rounded-xl	text-lg bg-red-600 Hazardous	 ">loading </h>
 </div>
 
 <div class="secondcontainer mt-10">
-  <h1 class="text-center text-8xl text-white avgval2	">loading</h1>
+  <h1 class="text-center text-8xl text-white avgval2">loading</h1>
 </div>
 
 <div class="rangecontainer mt-10  flex flex-row	items-center md:flex-row md:justify-center	 	">
@@ -136,24 +139,40 @@
   </div>
 
   <div class="bg-white rounded-md shadow-md p-6">
-    <h4 class="font-bold text-lg mb-2">Hydrogen Sulfide (H2S) </h4>
-    <p class="sensormq136value text-gray-600 mb-2">Loading</p>
-    <p class="sensormq136time text-gray-600">Loading</p>
+    <h4 class="font-bold text-lg mb-2 text-[#1B98F5] ">Temperature</h4>
+    <p class="Temperature text-gray-600 mb-2 text-[#1B98F5]">Loading</p>
+    <p class="TemperatureVAL text-gray-600 text-[#1B98F5]">Loading</p>
   </div>
 
-  <div class="bg-white rounded-md shadow-md p-6">
-    <h4 class="font-bold text-lg mb-2">Temperature</h4>
-    <p class="Temperature text-gray-600 mb-2">Loading</p>
-    <p class="TemperatureVAL text-gray-600">Loading</p>
-  </div>
-
-  <div class="bg-white rounded-md shadow-md p-6">
-    <h4 class="font-bold text-lg mb-2">Humidity</h4>
-    <p class="Humidity text-gray-600 mb-2">Loading</p>
-    <p class="HumidityTime text-gray-600">Loading</p>
+  <div class="bg-white rounded-md shadow-md p-6 md:">
+    <h4 class="font-bold text-lg mb-2 text-[#FF6263]">Humidity</h4>
+    <p class="Humidity text-gray-600 mb-2 text-[#FF6263]">Loading</p>
+    <p class="HumidityTime text-gray-600 text-[#FF6263]">Loading</p>
   </div>
 </div>
 
+<!-- 
+
+
+ -->
+ <h1 class="text-center text-4xl text-white mt-20		">Hydrogen Sulfide (H2S)</h1>
+  
+
+  <p class="text-center " style="color: #758283;">Real-time Hydrogen Sulfide Value    </p>
+  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update2">April 18, 2023 at 10:07:26 PM
+
+  </span></h2>
+</div>
+<div class="btncontainer flex justify-center  ">
+  <h1 id="main-heading2" class="mt-8 px-6 py-2  rounded-xl	text-lg bg-red-600 Hazardous2	 "> >5% ~ Hazardous</h1>
+
+
+</div>
+
+
+<div class="secondcontainer mt-10">
+  <h1 class="text-center text-8xl text-white sensormq136value">loading</h1>
+</div> 
 
 <!-- <div class="historycontainer mt-20 w-full md:w-4/5 md:ml-20  "> -->
   <!-- <h1 class="text-center text-2xl text-[#289bd1]">Historic Air Quality Graph of Kharghar</h1> -->
@@ -178,7 +197,10 @@
   </div>
   <div id="chart6"  class="md:w-3/4 md:h-1/4  md:ml-[15%] md:mt-5">
   </div> -->
-  <h1 class="text-white	text-2xl text-center">Location of Device </h1>
+
+
+  
+  <h1 class="text-white	text-2xl text-center mt-20">Location of Device </h1>
  <iframe  class="mt-20 mb-10 ml-10 w-3/2 h-[40%] md:mt-[25px] md:ml-[30%] md:w-[600px] h-[450px]" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3771.8470422246196!2d73.0550782!3d19.026460599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDAxJzM1LjMiTiA3M8KwMDMnMTguMyJF!5e0!3m2!1sen!2sin!4v1680161948611!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
 </body>
 </html>
