--- a/data.html
+++ b/data.html
@@ -164,7 +164,7 @@
   </span></h2>
 </div>
 <div class="btncontainer flex justify-center  ">
-  <h1 id="main-heading2" class="mt-8 px-6 py-2  rounded-xl	text-lg bg-red-600 Hazardous2	 "> >5% ~ Hazardous</h1>
+  <h1 id="main-heading2" class="mt-8 px-6 py-2  rounded-xl	text-lg bg-red-600 Hazardous2	 ">loading</h1>
 
 
 </div>
