added mq136 value

--- a/data.html
+++ b/data.html
@@ -159,8 +159,7 @@
   
 
   <p class="text-center " style="color: #758283;">Real-time Hydrogen Sulfide Value    </p>
-  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update2">April 18, 2023 at 10:07:26 PM
-
+  <h2 class="text-center mt-10 text-xl " style="color: #CAD5E2;" >Update : <span class="update2">Loading
   </span></h2>
 </div>
 <div class="btncontainer flex justify-center  ">
